scripts/k8s/ingress_dh.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dh-ingress
  namespace: dh
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /search-edge/.*
        backend:
          serviceName: search-edge
          servicePort: 8080
