scripts/k8s/ingress_rma.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rma-ingress
  namespace: rma
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /title
        backend:
          serviceName: title-edge
          servicePort: 8080
